--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,42 @@
 spring.application.name=musinsa-coordi-backend
+
+# ?? ?? ??
+server.port=8080
+
+# 404 ?? ??? ?? ??
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+# Thymeleaf ??
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
+# H2 Database ??
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=comando705
+spring.datasource.password=123qwe!@#
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# SQL ???? ?? ??
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# H2 ?? ???
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Swagger UI ??
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.disable-swagger-default-url=true
